<resources>
    <string name="app_name">pdpatrol</string>

    <string name="login_login">登  录</string>
    <string name="login_user">账号</string>
    <string name="login_key">密码</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login_auto_login">自动登录</string>
    <string name="title">平度市安全检查监督管理系统</string>
    <string name="app_second_title">企业版</string>

    <string name="warning_title">一键报警</string>
    <string name="warning_title_hint">请输入报警标题</string>
    <string name="warning_content_hint">请输入报警内容</string>
    <string name="some_error">发生错误</string>
    <string name="btn_return">返回</string>

    <string name="security_commitments">安全承诺</string>

    <string name="enterprise_publicity">企业公示</string>
    <string name="signature_of_principal">负责人签字</string>
    <string name="take_photo">点击相机拍照</string>
    <string name="uploading">上传</string>

    <string name="takePhotoByAlbum">手机相册</string>
    <string name="takePhotoByCamera">立即拍摄</string>


</resources>
