<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_security_commitments"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.ssl.pdpatrol.securityCommitments.view.SecurityComActivity">

    <include layout="@layout/actionbar_securitycom" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/enterprise_publicity"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <com.isseiaoki.simplecropview.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/camera_enetrprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:src="@mipmap/camera"
        custom:scv_background_color="@color/white"
        custom:scv_crop_mode="fit_image"
        custom:scv_frame_color="@color/colorAccent"
        custom:scv_frame_stroke_weight="1dp"
        custom:scv_guide_color="@color/colorAccent"
        custom:scv_guide_show_mode="show_always"
        custom:scv_guide_stroke_weight="1dp"
        custom:scv_handle_color="@color/colorAccent"
        custom:scv_handle_show_mode="show_always"
        custom:scv_handle_size="14dp"
        custom:scv_min_frame_size="50dp"
        custom:scv_overlay_color="@color/overlay"
        custom:scv_touch_padding="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/lightGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/signature_of_principal"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.isseiaoki.simplecropview.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/camera_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:src="@mipmap/camera"
        custom:scv_background_color="@color/white"
        custom:scv_crop_mode="fit_image"
        custom:scv_frame_color="@color/colorAccent"
        custom:scv_frame_stroke_weight="1dp"
        custom:scv_guide_color="@color/colorAccent"
        custom:scv_guide_show_mode="show_always"
        custom:scv_guide_stroke_weight="1dp"
        custom:scv_handle_color="@color/colorAccent"
        custom:scv_handle_show_mode="show_always"
        custom:scv_handle_size="14dp"
        custom:scv_min_frame_size="50dp"
        custom:scv_overlay_color="@color/overlay"
        custom:scv_touch_padding="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/gray"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/lightGray" />

    <Button
        android:id="@+id/btn_security_com_upload"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_btn_common"
        android:text="@string/uploading"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
